# NPB-Rust

./: .gitignore  Cargo.toml  LICENSE  Platform.toml  README.md
NPB-RAYON/: .gitignore  Cargo.toml  Platform.toml  Platform.toml.A100  Platform.toml.GTX760  Platform.toml.MX570A  Platform.toml.RTX4000A  build.rs
NPB-RAYON/src/: bt.rs  cg.rs  cg1.rs  class.rs  ep.rs  ft.rs  is.rs  lu.rs  mg.rs  sp.rs
NPB-RAYON/src/cg_alloc/: mod.rs
NPB-RAYON/src/cg_kernels/matvecmul_4/: Makefile
NPB-RAYON/src/cg_kernels/vectors/: Makefile
NPB-RAYON/src/cg_state/: mod.rs
NPB-RAYON/src/kernels/: Makefile  cgkernels.h  dot_product.cu  dot_product.h
NPB-RAYON/src/kernels/matvecmul/: Makefile  matvecmul.cu
NPB-RAYON/src/kernels/matvecmul_0/: Makefile  matvecmul.cu
NPB-RAYON/src/kernels/matvecmul_1/: Makefile  matvecmul.cu
NPB-RAYON/src/kernels/matvecmul_2/: Makefile  matvecmul.cu
NPB-RAYON/src/kernels/matvecmul_3/: Makefile  matvecmul.cu
NPB-RAYON/src/kernels/norm/: Makefile  norm.cu
NPB-RAYON/src/kernels/scalarvecmul1/: Makefile  scalarvecmul1.cu
NPB-RAYON/src/kernels/scalarvecmul2/: Makefile  scalarvecmul2.cu
NPB-RAYON/src/kernels/vectors/: Makefile  vectors.cu
NPB-RAYON/src/kernels/vecvecmul/: Makefile  vecvecmul.cu
NPB-RUST/: .gitignore  Cargo.toml
NPB-RUST/src/: bt.rs  cg.rs  ep.rs  ft.rs  is.rs  lu.rs  mg.rs  sp.rs
rust-cuda-project/: Cargo.toml  Makefile  README.md  build.rs
rust-cuda-project/src/: dot_product.cu  dot_product.h  main.rs
src/: cg.rs  class.rs
src/cg_alloc/: mod.rs
src/cg_kernels/: Makefile  cuda_aux_kernels.rs  cuda_compute_kernels.rs  cuda_kernels.rs  mod copy 2.rs  mod.rs  multicore_aux_kernels.rs  multicore_compute_kernels.rs
src/cg_kernels/matvecmul_0/: Makefile
src/cg_kernels/matvecmul_1/: Makefile
src/cg_kernels/matvecmul_3/: Makefile
src/cg_kernels/matvecmul_4/: matvecmul.cu
src/cg_kernels/scalarvecmul1/: scalarvecmul1.cu
src/cg_kernels/vecvecmul/: vecvecmul.cu
