[package]
    name = "npb-rust-ser"
    version = "0.1.0"
    edition = "2024"

[profile.release]
    opt-level = 3
    debug = false
    strip = true
    codegen-units = 1
    lto = "fat"
    panic = "abort"

[[bin]]
    name = "bt"
    path = "src/bt.rs"
[[bin]]
    name = "ep"
    path = "src/ep.rs"
[[bin]]
    name = "cg"
    path = "src/cg.rs"
[[bin]]
    name = "ft"
    path = "src/ft.rs"
[[bin]]
    name = "is"
    path = "src/is.rs"
[[bin]]
    name = "lu"
    path = "src/lu.rs"
[[bin]]
    name = "mg"
    path = "src/mg.rs"
[[bin]]
    name = "sp"
    path = "src/sp.rs"

[dependencies]
rayon = "1.10"
platform-aware = { path = "../../platform-aware"}
platform-aware-features = { path = "../../platform-aware/platform-aware-features"}
platform-aware-amd = { path = "../../platform-aware/platform-aware-amd"}
platform-aware-intel = { path = "../../platform-aware/platform-aware-intel"}
platform-aware-nvidia = { path = "../../platform-aware/platform-aware-nvidia"}
lazy_static = "1.5.0"
cc="1.0"

[lints.rust]
 unexpected_cfgs = {level = "warn", check-cfg = ['cfg(class,values("S","W","A","B","C","D","E","F"))','cfg(safe,values("true"))','cfg(timers,values("true"))']}

[package.metadata.cargo-build]
rustc-link-search = [
    ".",
    "./kernels/", 
    "./src/kernels/",
    "native=/usr/local/cuda/lib64"
]
rustc-link-lib = [
    "dylib=dot_product",
    "dylib=cudart"
]